--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,11 +2,11 @@
 parameters:
     database_host: 127.0.0.1
     database_port: null
-    database_name: symfony
-    database_user: root
-    database_password: null
+    database_name: cadpaz_db
+    database_user: cadpaz_user
+    database_password: cadpaz_password
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
     mailer_password: null
-    secret: ThisTokenIsNotSoSecretChangeIt
+    secret: 4f2cac84388f4702-97913cc0941ba0f6
