--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-apigen.target=/opt/lampp/htdocs/cadpaz/doc
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=/var/www/PhpProject1
