Implemtada busca de usuario

--- a/src/CadpazBundle/Resources/config/routing.yml
+++ b/src/CadpazBundle/Resources/config/routing.yml
@@ -5,14 +5,24 @@ pessoa_index:
 pessoa_list:
     path:     /pessoa/list
     defaults: { _controller: CadpazBundle:Pessoa:list }
+    options:
+        expose: true
 
 pessoa_busca:
     path:     /pessoa/busca
     defaults: { _controller: CadpazBundle:Pessoa:busca }
+    options:
+        expose: true
 
 pessoa_new:
     path:     /pessoa/new
     defaults: { _controller: CadpazBundle:Pessoa:new }
+
+pessoa_view:
+    path:     /pessoa/{id}/view
+    defaults: { _controller: CadpazBundle:Pessoa:view }
+    options:
+        expose: true
 
 atendimento_index:
     path:     /atendimento
