--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -3,7 +3,7 @@ parameters:
     database_host: 127.0.0.1
     database_port: null
     database_name: cadpaz_db
-    database_user: cadpaz_user
+    database_user: cadpaz_user2
     database_password: cadpaz_password
     mailer_transport: smtp
     mailer_host: 127.0.0.1
