--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "jms/serializer-bundle": "dev-master",
-        "friendsofsymfony/jsrouting-bundle": "dev-master"
+        "jms/serializer-bundle": "^1.0",
+        "friendsofsymfony/jsrouting-bundle": "^1.5",
+        "doctrine/doctrine-fixtures-bundle": "^2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
