--- a/src/CadpazBundle/Resources/config/routing.yml
+++ b/src/CadpazBundle/Resources/config/routing.yml
@@ -98,6 +98,11 @@ telefone_new:
 # Fim das rotas para o controlador Telefone
 
 # Rotas para o controlador Questionario
+questionario_new:
+    path:     /questionario/{pessoa_id}/new
+    defaults: { _controller: CadpazBundle:Questionario:new }
+    options:
+        expose: true
 # Fim das rotas para o controlador Questionario
 
 
