--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,8 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_USER:        ROLE_VIEWER
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_EDITOR:      ROLE_USER
+        ROLE_ADMIN:       ROLE_EDITOR
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
@@ -24,7 +24,8 @@ security:
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: ROLE_ADMIN }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/, role: ROLE_VIEWER }
+        - { path: ^/pessoa, role: ROLE_USER }
+        #- { path: ^/, role: ROLE_VIEWER }
