--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,17 +31,20 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+    
 
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
+
+
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ CadpazBundle, FOSUserBundle, AppBundle ]
+    bundles:        [ DedraksConfigBundle, CadpazBundle, FOSUserBundle, AppBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
