--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,9 +23,11 @@ security:
             anonymous:    true
 
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: ROLE_ADMIN }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
-        - { path: ^/pessoa, role: ROLE_USER }
+        - { path: ^/login$,     role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register,   role: ROLE_ADMIN }
+        - { path: ^/resetting,  role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/,     role: ROLE_ADMIN }
+        - { path: ^/pessoa,     role: ROLE_USER }
+        - { path: ^/config,     role: ROLE_ADMIN }
+        - { path: ^/relatorios, role: ROLE_ADMIN }
         #- { path: ^/, role: ROLE_VIEWER }
