--- a/src/Dedraks/ConfigBundle/Resources/config/routing.yml
+++ b/src/Dedraks/ConfigBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 dedraks_config_homepage:
-    path:     /hello/{name}
+    path:     /config/index
     defaults: { _controller: DedraksConfigBundle:Default:index }
