CRUD de usuarios criado

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,6 +90,8 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: CadpazBundle\Entity\User
+    group:
+        group_class: CadpazBundle\Entity\Group
     registration:
         form:
             type: app_user_registration
