--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,6 +8,10 @@ fos_user:
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
+fos_user_group:
+    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+    prefix: /group
+
 cadpaz:
     resource: "@CadpazBundle/Resources/config/routing.yml"
     prefix:   /
