Alteracoes no gerenciamento de usuarios

--- a/src/CadpazBundle/Resources/config/routing.yml
+++ b/src/CadpazBundle/Resources/config/routing.yml
@@ -252,3 +252,9 @@ configuracoes_caso_tipo_delete:
     defaults: { _controller: CadpazBundle:Configuracoes:deleteCasoTipo }
     options:
         expose: true
+        
+configuracoes_origem_new:
+    path:     /config/origem/new
+    defaults: { _controller: CadpazBundle:Configuracoes:new }
+    options:
+        expose: true
