--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "^2.2",
-        "friendsofsymfony/jsrouting-bundle": "^1.5",
-        "jms/serializer-bundle": "^1.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
         "ob/highcharts-bundle": "^1.2",
-        "twig/extensions": "^1.3"
+        "twig/extensions": "^1.3",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "jms/serializer-bundle": "^1.0",
+        "friendsofsymfony/jsrouting-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
